--- a/notebooks/1-info-in-memory.ipynb
+++ b/notebooks/1-info-in-memory.ipynb
@@ -20,7 +20,10 @@
    "outputs": [],
    "source": [
     "# Function to swap two values in an array\n",
-    "\n",
+    "def swap(arr, index1, index2):\n",
+    "    temp = arr[index1]\n",
+    "    arr[index1] = arr[index2]\n",
+    "    arr[index2] = temp\n",
     "\n",
     "# Example usage\n",
     "array = [10, 20, 30, 40, 50]\n",
@@ -53,7 +56,24 @@
    "outputs": [],
    "source": [
     "# Book solution\n",
+    "def insertion_sort(A):\n",
+    "    N = len(A)\n",
+    "    i = 1\n",
     "\n",
+    "    while i < N:\n",
+    "        current = A[i]\n",
+    "        j= i - 1\n",
+    "\n",
+    "        while j >= 0 and A[j] > current:\n",
+    "            A[j + 1] = A[j]\n",
+    "            j -= 1\n",
+    "            if debug:\n",
+    "                print(f\"Inside while: Array: {A}, current: {current}, i: {i}, j: {j}\")\n",
+    "\n",
+    "        A[j + 1] = current\n",
+    "        i += 1 i += 1\n",
+    "        if debug:\n",
+    "            print(f\"Outside while: Array: {A}, current: {current}, i: {i}, j: {j}\")\n",
     "\n",
     "# Example usage\n",
     "array = [12, 11, 13, 5, 6]\n",
@@ -82,7 +102,18 @@
    "outputs": [],
    "source": [
     "# Function to check if two strings are exactly equal\n",
+    "def compare_string_exactly(str1, str2):\n",
+    "    if len(str1) != len(str2):\n",
+    "        print(\"str1 and str2 are Not the same length!\")\n",
+    "        return False\n",
+    "    \n",
+    "    size = len(str1)\n",
+    "    i = 0\n",
+    "    while i < size and str1[i] == str2[i]:\n",
+    "        i+=1\n",
     "\n",
+    "    print(f\"Now at index: {i}\")\n",
+    "    return i == size\n",
     "\n",
     "# Example usage\n",
     "string1 = \"hello\"\n",
