--- a/notebooks/1-info-in-memory.ipynb
+++ b/notebooks/1-info-in-memory.ipynb
@@ -15,9 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before swap: [10, 20, 30, 40, 50]\n",
+      "After swap: [10, 40, 30, 20, 50]\n"
+     ]
+    }
+   ],
    "source": [
     "# Function to swap two values in an array\n",
     "def swap(arr, index1, index2):\n",
@@ -51,12 +60,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array: [12, 11, 13, 5, 6]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "insertion_sort() missing 1 required positional argument: 'debug'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 24\u001b[0m\n\u001b[1;32m     22\u001b[0m array \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m12\u001b[39m, \u001b[38;5;241m11\u001b[39m, \u001b[38;5;241m13\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m6\u001b[39m]\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOriginal array:\u001b[39m\u001b[38;5;124m\"\u001b[39m, array)\n\u001b[0;32m---> 24\u001b[0m \u001b[43minsertion_sort\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSorted array:\u001b[39m\u001b[38;5;124m\"\u001b[39m, array)\n",
+      "\u001b[0;31mTypeError\u001b[0m: insertion_sort() missing 1 required positional argument: 'debug'"
+     ]
+    }
+   ],
    "source": [
     "# Book solution\n",
-    "def insertion_sort(A):\n",
+    "def insertion_sort(A, debug):\n",
     "    N = len(A)\n",
     "    i = 1\n",
     "\n",
@@ -71,7 +99,7 @@
     "                print(f\"Inside while: Array: {A}, current: {current}, i: {i}, j: {j}\")\n",
     "\n",
     "        A[j + 1] = current\n",
-    "        i += 1 i += 1\n",
+    "        i += 1\n",
     "        if debug:\n",
     "            print(f\"Outside while: Array: {A}, current: {current}, i: {i}, j: {j}\")\n",
     "\n",
@@ -119,7 +147,7 @@
     "string1 = \"hello\"\n",
     "string2 = \"hello\"\n",
     "\n",
-    "if compare_strings_exactly(string1, string2):\n",
+    "if compare_string_exactly(string1, string2):\n",
     "    print(f\"{string1} and {string2} are exactly equal.\")\n",
     "else:\n",
     "    print(f\"{string1} and {string2} are not equal.\")"
