--- a/notebooks/2-binary-search-linked-lists.ipynb
+++ b/notebooks/2-binary-search-linked-lists.ipynb
@@ -15,12 +15,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value 21 found at index 2.\n"
+     ]
+    }
+   ],
    "source": [
     "# Function for Linear Scan to find a value in an array\n",
-    "\n",
+    "def linear_scan(arr, target):\n",
+    "    idx = 0\n",
+    "    while idx < len(arr):\n",
+    "        if arr[idx] == target:\n",
+    "            return idx\n",
+    "        idx += 1\n",
+    "    return -1\n",
     "\n",
     "# Example usage\n",
     "array = [10, 15, 21, 30, 45]\n",
@@ -52,12 +66,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'mid' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 24\u001b[0m\n\u001b[1;32m     21\u001b[0m value_to_find \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m21\u001b[39m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m# Perform binary search\u001b[39;00m\n\u001b[0;32m---> 24\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mbinary_search\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue_to_find\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m result \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValue \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue_to_find\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m found at index \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresult\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[2], line 6\u001b[0m, in \u001b[0;36mbinary_search\u001b[0;34m(A, target)\u001b[0m\n\u001b[1;32m      4\u001b[0m low \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m low \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m high:\n\u001b[0;32m----> 6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mArray: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mA\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, target: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtarget\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, [low: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlow\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, mid: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mmid\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, high: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhigh\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      7\u001b[0m     mid \u001b[38;5;241m=\u001b[39m (high \u001b[38;5;241m+\u001b[39m low) \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m A[mid] \u001b[38;5;241m==\u001b[39m target:\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: cannot access local variable 'mid' where it is not associated with a value"
+     ]
+    }
+   ],
    "source": [
     "# Function for Binary Search to find a value in a sorted array\n",
-    "\n",
+    "def binary_search(A, target):\n",
+    "    high = len(A) - 1\n",
+    "    low = 0\n",
+    "    while low <= high:\n",
+    "        print(f\"Array: {A}, target: {target}, [low: {low}, mid: {mid}, high: {high}]\")\n",
+    "        mid = (high + low) // 2\n",
+    "        if A[mid] == target:\n",
+    "            print(\"congratulations!\")\n",
+    "            return True. mid\n",
+    "        elif A[mid] < target:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "    return -1\n",
     "\n",
     "# Example usage (array must be sorted for binary search)\n",
     "array = [10, 15, 21, 30, 45]\n",
@@ -94,6 +134,12 @@
    "outputs": [],
    "source": [
     "# Function to double the size of the array\n",
+    "def array_double(old_array):\n",
+    "    length = len(old_array)\n",
+    "    new_array = [0] * (length * 2)\n",
+    "    for i in range(length):\n",
+    "        new_array[i] = old_array[i]\n",
+    "    return new_array\n",
     "\n",
     "\n",
     "# Example usage\n",
@@ -138,7 +184,17 @@
    "outputs": [],
    "source": [
     "# Function to lookup an element in a linked list by index\n",
-    "\n",
+    "class ListNode:\n",
+    "    def __init__(self, value = 0, next = None):\n",
+    "        self.value = value \n",
+    "        self.next = next\n",
+    "def linked_list_lookup(head, ele_num):\n",
+    "    current = head\n",
+    "    index = 0\n",
+    "    while index < ele_num and current is not None:\n",
+    "    current = current.next\n",
+    "    index += 1\n",
+    "    return current.value if current is not None else None\n",
     "# Example usage\n",
     "# Creating a linked list: 10 -> 20 -> 30 -> 40 -> 50\n",
     "node1 = ListNode(10)\n",
