--- a/notebooks/0-python-basics.ipynb
+++ b/notebooks/0-python-basics.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,11 +76,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Basic \"Hello, World!\" example\n"
+    "# Basic \"Hello, World!\" example\n",
+    "print(\"Hello, World!\")"
    ]
   },
   {
@@ -94,20 +103,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Addition: 15\n",
+      "Subtraction: 5\n",
+      "Multiplication: 50\n",
+      "Division: 2.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Simple math operations\n",
-    "\n",
+    "a = 10\n",
+    "b = 5\n",
     "\n",
     "# Addition\n",
-    "\n",
+    "sum_result = a + b\n",
+    "print(\"Addition:\", sum_result)\n",
     "# Subtraction\n",
-    "\n",
+    "sub_result = a - b\n",
+    "print(\"Subtraction:\", sub_result)\n",
     "# Multiplication\n",
-    "\n",
-    "# Division\n"
+    "mul_result = a * b\n",
+    "print(\"Multiplication:\", mul_result)\n",
+    "# Division\n",
+    "div_result = a / b\n",
+    "print(\"Division:\", div_result)"
    ]
   },
   {
@@ -121,14 +147,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, ALmansur!\n",
+      "Addition: 3\n",
+      "Division: 0.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Getting user input and using it\n",
+    "name = input(\"Enter your name: \")\n",
+    "print(\"Hello, \" + name + \"!\")\n",
     "\n",
-    "\n",
-    "# Working with numbers\n"
+    "# Working with numbers\n",
+    "num1 = input(\"Enter the 1st number: \")\n",
+    "num2 = input(\"Enter the 2nd number: \")\n",
+    "num1 = int(num1)\n",
+    "num2 = int(num2)\n",
+    "print (\"Addition:\", num1 + num2)\n",
+    "print (\"Division:\", num1 / num2)"
    ]
   },
   {
@@ -142,11 +185,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 is a positive number.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Basic if-else example\n"
+    "# Basic if-else example\n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "if num > 0:\n",
+    "    print(f\"{num} is a positive number.\")\n",
+    "elif num < 0:\n",
+    "    print(f\"{num} is a negative number.\")\n",
+    "else:\n",
+    "    print(f\"{num} is zero.\")"
    ]
   },
   {
@@ -160,11 +218,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Interation 1\n",
+      "Interation 2\n",
+      "Interation 3\n",
+      "Interation 4\n",
+      "Interation 5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Basic for loop example\n"
+    "# Basic for loop example\n",
+    "for i in range(5):\n",
+    "    print(f\"Interation {i + 1}\")"
    ]
   },
   {
@@ -178,11 +250,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current number is: 5\n",
+      "Current number is: 6\n",
+      "Current number is: 7\n",
+      "Current number is: 8\n",
+      "Current number is: 9\n",
+      "The loop has ended because the number is now 10 or greater.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Basic while loop example\n"
+    "# Basic while loop example\n",
+    "number = int(input(\"Enter a number less than 10 to start: \"))\n",
+    "while number < 10:\n",
+    "    print(f\"Current number is: {number}\")\n",
+    "    number += 1\n",
+    "print(\"The loop has ended because the number is now 10 or greater.\")"
    ]
   },
   {
@@ -196,11 +286,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, aa!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Function to greet the user\n"
+    "# Function to greet the user\n",
+    "def greet_user(name):\n",
+    "    print(f\"Hello, {name}!\")\n",
+    "user_name = input(\"Enter your name: \")\n",
+    "greet_user(user_name)"
    ]
   },
   {
@@ -214,14 +316,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to convert Celsius to Fahrenheit\n",
+    "def celsius_to_fahrenheit(celsius):\n",
+    "    fahrenheit = (celsius * 9/5) + 32\n",
+    "    return fehrenheit\n",
     "\n",
-    "\n",
-    "# Get temperature from user\n"
+    "# Get temperature from user"
    ]
   },
   {
@@ -235,15 +339,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'random' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Generate a random number between 1 and 10\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m secret_number \u001b[38;5;241m=\u001b[39m \u001b[43mrandom\u001b[49m\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m10\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Keep asking the user until they guess correctly\u001b[39;00m\n\u001b[1;32m      5\u001b[0m guess \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'random' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Generate a random number between 1 and 10\n",
+    "secret_number = random.randint(1, 10)\n",
     "\n",
-    "\n",
-    "# Keep asking the user until they guess correctly\n"
+    "# Keep asking the user until they guess correctly\n",
+    "guess = 0\n",
+    "while guess != secret_number:\n",
+    "    guess = int(input(\"Guess a number between 1 and 10: \"))\n",
+    "    if guess < secret_number:\n",
+    "        print(\"Too low! Try again.\")\n",
+    "    elif guess > secret_number:\n",
+    "        print(\"Too high! Try again.\")\n",
+    "    else:\n",
+    "        print(\"congratulations! You have guess.\")"
    ]
   },
   {
@@ -270,7 +395,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FizzBuzz example\n"
+    "# FizzBuzz example\n",
+    "n = int(input(\"Enter a positive integer: \"))\n",
+    "for i in range(1, n + 1):\n",
+    "    if i % 3 == 0 and i % 5 == 0:\n",
+    "        print(\"FizzBuzz\")\n",
+    "    elif i % 3 == 0:\n",
+    "        print(\"Fizz\")\n",
+    "    elif i % 5 == 0:\n",
+    "        print(\"Buzz\")\n",
+    "    else:\n",
+    "        print(i)"
    ]
   },
   {
