--- a/notebooks/2-binary-search-linked-lists.ipynb
+++ b/notebooks/2-binary-search-linked-lists.ipynb
@@ -245,6 +245,41 @@
    "outputs": [],
    "source": [
     "# Function to insert a node in a linked list\n",
+    "def insert_at_beginning(head, new_value):\n",
+    "    new node = ListNode(new_value)\n",
+    "    new_node.next = head\n",
+    "    return new_node # New head of the list \n",
+    "def insert_at_end(head, new_value):\n",
+    "    new_node = ListNode(new_value)\n",
+    "    if head is None:\n",
+    "        return new_node # New head of the list (if empty)\n",
+    "    current = head\n",
+    "    while current.next is not None:\n",
+    "        current = current.next\n",
+    "    current.next = new_node\n",
+    "    return head\n",
+    "def insert_in_middle(head, new_value, position):\n",
+    "    new node = ListNode(new_value)\n",
+    "    f position == 0:\n",
+    "        return insert_at_beginning(head, new_value)\n",
+    "    current = head\n",
+    "    count = 0\n",
+    "    while current is not None and count < position - 1:\n",
+    "        current = current.next\n",
+    "        count += 1\n",
+    "    if current is None:\n",
+    "        print(\"Position is out of bounds\")\n",
+    "        return head\n",
+    "    new_node.next = current.next\n",
+    "    current.next = new_node\n",
+    "    return head\n",
+    "\n",
+    "def print_list(head):\n",
+    "    current = head\n",
+    "    while current is not None:\n",
+    "        print(current.value, end=\" -> \")\n",
+    "        current = current.next\n",
+    "    print(\"None\")\n",
     "\n",
     "# Example usage\n",
     "head = ListNode(10)\n",
@@ -291,7 +326,18 @@
    "outputs": [],
    "source": [
     "# Function to delete a node in a linked list by index or value\n",
-    "\n",
+    "def delete_by_value(head, value):\n",
+    "    if head is not None and head.value == value:\n",
+    "        return head.next # Bypass (delete) original head\n",
+    "current = head\n",
+    "# Traverse the list\n",
+    "while current is not None and current.next is not None:\n",
+    "    if current.next.value == value:\n",
+    "        current.next = current.next.next\n",
+    "        return head\n",
+    "# else, value not found, continue to next Node\n",
+    "    current = current.next\n",
+    "return head # Value not found\n",
     "# Example usage\n",
     "head = ListNode(10)\n",
     "head = insert_at_end(head, 20)\n",
